force-app/main/default/objects/Product_Fee__c/Product_Fee__c.object-meta.xml
<CustomObject>
    <label>Product Fee</label>
    <nameField>
        <label>Product Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Fee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>