force-app/main/default/objects/Product_Fee__c/fields/Card_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement__c</fullName>
    <label>Card Replacement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>