force-app/main/default/objects/Product_Fee__c/fields/Contract_Lenght__c.field-meta.xml
<CustomField>
    <fullName>Contract_Lenght__c</fullName>
    <label>Contract Lenght</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>