force-app/main/default/objects/Product_Fee__c/fields/Special_Package_Discount__c.field-meta.xml
<CustomField>
    <fullName>Special_Package_Discount__c</fullName>
    <label>Special Package Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>